--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,12 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>購物網站</title>
+  <title>SHOP</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
 <body>
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="/">SHOP</a>
+      <div class="navbar-nav nav-custom">       
+        <a class="nav-item nav-link nav-custom" href="#"><i class="fas fa-user fa-lg"></i></a>
+        <a class="nav-item nav-link nav-custom" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>     
+      </div> 
+  </nav>
   <div class="container">
-    {{body}}
+    {{{body}}}
   </div>
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
