--- a/views/products.hbs
+++ b/views/products.hbs
@@ -12,3 +12,24 @@
 {{/each}}
 </div>
 
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" href="?page={{prev}}" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    {{#each page}}
+    <li class="page-item"><a class="page-link" href="?page={{this}}">{{this}}</a></li>
+    {{/each}}
+    <li class="page-item">
+      <a class="page-link" href="?page={{post}}" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
+
