--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,7 +13,9 @@
     <a class="navbar-brand" href="/">SHOP</a>
       <div class="navbar-nav nav-custom">       
         <a class="nav-item nav-link nav-custom" href="#"><i class="fas fa-user fa-lg"></i></a>
-        <a class="nav-item nav-link nav-custom" href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>     
+        <button class="btn nav-custom" data-toggle="modal" data-target="#cartModal">
+        <i class="fas fa-shopping-cart fa-lg"></i>   
+        </button>
       </div> 
   </nav>
   <div class="container">
