--- a/views/product.hbs
+++ b/views/product.hbs
@@ -7,6 +7,11 @@
     <p>${{product.price}}</p>
     <p>{{product.description}}</p>
     <form action="">
+      <div class="add-min-button">
+        <input id="min" type="button" value="-" >
+        <input id="num" name="num" value="1" readonly="true">
+        <input id="add" type="button" value="+" >
+      </div>
       <button type="submit" class="btn btn-primary">Add To Cart</button>
     </form>
   </div>
