--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,7 @@
 .modal.right .modal-dialog {
   position: fixed;
   margin: auto;
-  width: 320px;
+  width: 400px;
   height: 100%;
   -webkit-transform: translate3d(0%, 0, 0);
       -ms-transform: translate3d(0%, 0, 0);
@@ -64,7 +64,7 @@
 
 
 #num {
-  width: 40px;
+  width: 30px;
   text-align:center;
 }
 
@@ -72,6 +72,26 @@
   margin-bottom: 20px;
 }
 
+.inline {
+  display: inline;
+}
 
+.subtotal {
+  padding-right: 120px;
+}
+
+.horizontal-left {
+  float: left;
+}
+
+.horizontal-right {
+  float: right;
+  margin-top: 4px;
+  margin-right: 10px;
+}
+
+.fa-trash-alt {
+  color: red;
+}
 
 
