--- a/views/partials/rightCart.hbs
+++ b/views/partials/rightCart.hbs
@@ -6,17 +6,35 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
-        {{#each cartItems}}
-        <div class="row">
-          <div class="col-5">
-            <img src="" alt="cartItem photo">
-          </div>
+        {{#each items}}
+        <div class="row" style="margin-bottom: 10px;">
           <div class="col-7">
-            {{this.quantity}}
+            <img class="card-img-top" src="{{this.image}}" alt="cartItem photo">
+            
+          </div>
+          <div class="col-5">
+            <h6>{{this.name}}</h6>
+            <p>${{this.price}}</p>
+            <div class="add-min-button horizontal-left">
+              <input id="min" type="button" value="-" >
+              <input id="num" name="num" value="{{this.quantity}}" readonly="true">
+              <input id="add" type="button" value="+">
+            </div>
+            <div class="horizontal-right">
+              <i class="fas fa-trash-alt fa-lg"></i>
+            </div>  
           </div>
         </div>
-        
         {{/each}}
+      </div>
+      <div class="modal-footer">
+        <div class="subtotal">
+          <h6 class="inline">Subtotal: </h6>
+          <p class="inline">${{totalPrice}}</p>
+        </div>
+        <form action="">
+          <button type="submit" class="btn btn-primary">check out</button>
+        </form>
       </div>
     </div>
   </div>
