Update the delete function of findOne to  findByPk and use cartItemId

--- a/views/partials/rightCart.hbs
+++ b/views/partials/rightCart.hbs
@@ -22,7 +22,7 @@
             </div>
             <div>
               <form action="/cart?_method=DELETE" method="POST">
-                <input type="hidden" name="ProductId" value="{{this.id}}">
+                <input type="hidden" name="cartItemId" value="{{this.cartItemId}}">
                 <button type="submit" class="btn"><i class="fas fa-trash-alt fa-lg"></i></button>
               </form>
             </div>  
