--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,1 +1,113 @@
-123
+{{> alert}}
+
+<ul class="list-group">
+  <li class="list-group-item list-group-item-dark">Check Order</li>
+  <li class="list-group-item">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col"></th>
+          <th scope="col">Price</th>
+          <th scope="col">Quantity</th>
+          <th scope="col"></th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        {{#each items}}
+        <tr>
+          <td scope="row">
+            <a href="/product/{{this.id}}"><img style="width: 150px;" src="{{this.image}}" alt="cartItem_photo"></a>
+          </td>
+          <td>
+            <a href="/product/{{this.id}}" style="text-decoration: none;" class="a-custom">{{this.name}}</a>
+          </td>
+          <td>${{this.price}}</td>
+          <td>
+             <form action="/cartItem/{{this.cartItemId}}/min" method="POST" class="inline-block">
+                <input type="submit" id="min" type="button" value="-" >
+              </form>
+              <input id="num" name="num" value="{{this.quantity}}" readonly="true" class="inline-block">
+              <form action="/cartItem/{{this.cartItemId}}/add" method="POST" class="inline-block">
+                <input type="submit" id="add" type="button" value="+">
+              </form>
+          </td>
+          <td>${{this.subtotalPrice}}</td>
+          <td>
+            <div class="trash">
+              <form action="/cartItem?_method=DELETE" method="POST">
+                <input type="hidden" name="cartItemId" value="{{this.cartItemId}}">
+                <button type="submit" class="btn"><i class="fas fa-trash-alt fa-lg"></i></button>
+              </form>
+            </div>
+            
+          </td>
+        </tr>
+        {{/each}}
+        <tr>
+          <th scope="col"></th>
+          <th scope="col"></th>
+          <th scope="col">Subtotal</th>
+          <th scope="col">{{this.totalQty}}</th>
+          <th scope="col">${{totalPrice}}</th>
+          <th scope="col"></th>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+</ul>
+
+<ul class="list-group">
+  <li class="list-group-item list-group-item-dark">Shipping Information</li>
+  <li class="list-group-item">
+    <form>
+      <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label">Name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="name" placeholder="Please input the recipient's name">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="email" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="email" placeholder="Please input email">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="password" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+          <input type="password" class="form-control" id="password" placeholder="Please input password">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="address" class="col-sm-2 col-form-label">Address</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="address" placeholder="Please input shipping address">
+        </div>
+      </div>
+    </form>
+  </li>
+</ul>
+
+<ul class="list-group">
+  <li class="list-group-item list-group-item-dark">Payment Method</li>
+  <li class="list-group-item">
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="payment_method" id="ATM" value="ATM" checked>
+      <label class="form-check-label" for="ATM">
+        ATM
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="payment_method" id="credit_card" value="credit_card">
+      <label class="form-check-label" for="credit_card">
+        Credit Card
+      </label>
+    </div>
+  </li>
+</ul>
+
+<center>
+  <button class="btn btn-secondary checkOut-btn">Check Out</button>
+</center>
