--- a/views/partials/rightCart.hbs
+++ b/views/partials/rightCart.hbs
@@ -16,12 +16,16 @@
             <h6>{{this.name}}</h6>
             <p>${{this.price}}</p>
             <div class="add-min-button horizontal-left">
-              <input id="min" type="button" value="-" >
-              <input id="num" name="num" value="{{this.quantity}}" readonly="true">
-              <input id="add" type="button" value="+">
+              <form action="/cartItem/{{this.cartItemId}}/min" method="POST" class="inline-block">
+                <input type="submit" id="min" type="button" value="-" >
+              </form>
+              <input id="num" name="num" value="{{this.quantity}}" readonly="true" class="inline-block">
+              <form action="/cartItem/{{this.cartItemId}}/add" method="POST" class="inline-block">
+                <input type="submit" id="add" type="button" value="+">
+              </form>
             </div>
-            <div>
-              <form action="/cart?_method=DELETE" method="POST">
+            <div class="trash">
+              <form action="/cartItem?_method=DELETE" method="POST">
                 <input type="hidden" name="cartItemId" value="{{this.cartItemId}}">
                 <button type="submit" class="btn"><i class="fas fa-trash-alt fa-lg"></i></button>
               </form>
@@ -31,11 +35,11 @@
         {{/each}}
       </div>
       <div class="modal-footer">
-        <div class="subtotal">
+        <div class="div-subtotal">
           <h6 class="inline">Subtotal: </h6>
           <p class="inline">${{totalPrice}}</p>
         </div>
-        <form action="" method="GET">
+        <form action="/cart" method="GET">
           <button type="submit" class="btn btn-primary">check out</button>
         </form>
       </div>
