Get orders page

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,7 +18,7 @@
             <i class="fas fa-user fa-lg"></i>
           </button>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Order Tracking</a>
+            <a class="dropdown-item" href="/orders">Order Tracking</a>
             <a class="dropdown-item" href="#">Account</a>
             <a class="dropdown-item" href="#">Log Out</a>
           </div>
