--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,8 +93,13 @@
 
 .checkOut-btn {
   width: 200px;
+  margin-top: 30px;
 }
 
 .alert {
   margin-bottom: 40px;
+}
+
+.nav-item {
+  display: inline-block;
 }
