--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,26 +9,27 @@
   <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand navbar-light bg-light">
+  <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="/">SHOP</a>
-
-      <div class="navbar-nav">
-        <div class="dropdown">
-          <button class="btn dropdown-toggle" data-toggle="dropdown" >
-            <i class="fas fa-user fa-lg"></i>
-          </button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="/orders">Order Tracking</a>
-            <a class="dropdown-item" href="#">Account</a>
-            <a class="dropdown-item" href="#">Log Out</a>
+      <nav class="nav-links">
+        <div class="nav-item">
+          <div class="dropdown">
+            <button class="btn dropdown-title" data-toggle="dropdown">
+              <i class="fas fa-user fa-lg"></i>
+            </button>
+            <div class="dropdown-menu dropdown-menu-right">
+              <a class="dropdown-item" href="/orders">Order Tracking</a>
+              <a class="dropdown-item" href="#">Account</a>
+              <a class="dropdown-item" href="#">Log Out</a>
+            </div>
           </div>
         </div>
-        <button class="btn " data-toggle="modal" data-target="#cartModal">
-          <i class="fas fa-shopping-cart fa-lg"></i>   
-        </button>
-      </div> 
-
-      
+        <div class="nav-item">
+          <button class="btn " data-toggle="modal" data-target="#cartModal">
+            <i class="fas fa-shopping-cart fa-lg"></i>   
+          </button>
+        </div>
+      </nav>    
   </nav>
   <div class="container">
     {{{body}}}
