--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -57,56 +57,58 @@
   </li>
 </ul>
 
-<ul class="list-group">
-  <li class="list-group-item list-group-item-dark">Shipping Information</li>
-  <li class="list-group-item">
-    <form>
+<form action="/orders" method="POST">
+  <ul class="list-group">
+    <li class="list-group-item list-group-item-dark">Shipping Information</li>
+    <li class="list-group-item">
       <div class="form-group row">
         <label for="name" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="name" placeholder="Please input the recipient's name">
+          <input type="text" class="form-control" name="name" id="name" placeholder="Please input the recipient's name">
         </div>
       </div>
       <div class="form-group row">
         <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="email" placeholder="Please input email">
+          <input type="email" class="form-control" name="email" id="email" placeholder="Please input the email">
         </div>
       </div>
       <div class="form-group row">
-        <label for="password" class="col-sm-2 col-form-label">Password</label>
+        <label for="phone" class="col-sm-2 col-form-label">Phone</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="password" placeholder="Please input password">
+          <input type="tel" class="form-control" name="phone" id="phone" placeholder="Please input the phone number">
         </div>
       </div>
       <div class="form-group row">
         <label for="address" class="col-sm-2 col-form-label">Address</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="address" placeholder="Please input shipping address">
+          <input type="text" class="form-control" name="address" id="address" placeholder="Please input the shipping address">
         </div>
       </div>
-    </form>
-  </li>
-</ul>
+    </li>
+  </ul>
 
-<ul class="list-group">
-  <li class="list-group-item list-group-item-dark">Payment Method</li>
-  <li class="list-group-item">
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="payment_method" id="ATM" value="ATM" checked>
-      <label class="form-check-label" for="ATM">
-        ATM
-      </label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="payment_method" id="credit_card" value="credit_card">
-      <label class="form-check-label" for="credit_card">
-        Credit Card
-      </label>
-    </div>
-  </li>
-</ul>
+  <ul class="list-group">
+    <li class="list-group-item list-group-item-dark">Payment Method</li>
+    <li class="list-group-item">
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="payment_method" id="ATM" value="ATM" checked>
+        <label class="form-check-label" for="ATM">
+          ATM
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="payment_method" id="credit_card" value="credit_card">
+        <label class="form-check-label" for="credit_card">
+          Credit Card
+        </label>
+      </div>
+    </li>
+  </ul>
 
-<center>
-  <button class="btn btn-secondary checkOut-btn">Check Out</button>
-</center>
+  <center>
+    <input type="hidden" name="cartId" value="{{cart.dataValues.id}}">
+    <input type="hidden" name="amount" value="{{totalPrice}}">
+    <button type="submit" class="btn btn-secondary checkOut-btn">Check Out</button>
+  </center>
+</form>
