--- a/views/check.hbs
+++ b/views/check.hbs
@@ -40,7 +40,7 @@
   </li>
 </ul>
 
-<form action="/order" method="POST">
+<form action="{{tradeInfo.PayGateWay}}" method="POST">
   <ul class="list-group">
     <li class="list-group-item list-group-item-dark">Shipping Information</li>
     <li class="list-group-item">
@@ -93,6 +93,11 @@
     <a type="button" href="javascript:history.back()" class="btn btn-secondary checkOut-btn" style="text-decoration: none; color:white">Previous</a>
     <input type="hidden" name="cartId" value="{{cart.dataValues.id}}">
     <input type="hidden" name="amount" value="{{totalPrice}}">
+    <input type="hidden" name="MerchantID" value="{{tradeInfo.MerchantID}}">
+    <input type="hidden" name="TradeInfo" value="{{tradeInfo.TradeInfo}}">
+    <input type="hidden" name="TradeSha" value="{{tradeInfo.TradeSha}}">
+    <input type="hidden" name="Version" value="{{tradeInfo.Version}}">
+    <input type="hidden" name="MerchantOrderNo" value="{{tradeInfo.MerchantOrderNo}}">
     <button type="submit" class="btn btn-secondary checkOut-btn">Check Out</button>
   </center>
 </form>
