admin/orders page

--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -1,8 +1,8 @@
 <h2>後台</h2>
-<a href="" style="text-decoration: none;">Product</a> |
-<a href="" style="text-decoration: none;">Order</a>
+<a href="/admin/products" style="text-decoration: none;">Product</a> |
+<a href="/admin/orders" style="text-decoration: none;">Order</a>
 <br>
-<a href="" type="button" class="btn btn-primary add-btn">Add New Product</a>
+<a href="/admin/products/new" type="button" class="btn btn-primary add-btn">Add New Product</a>
 
 <table class="table table-bordered">
   <thead class="thead-light">
