--- a/views/admin/newProduct.hbs
+++ b/views/admin/newProduct.hbs
@@ -7,9 +7,11 @@
     <input type="text" class="form-control" name="name" placeholder="Product Name">
   </div>
   <div class="form-group">
-    <label for="image">Upload File</label>
-    <img src="" alt="">
-    <input type="file" class="form-control-file" id="image" name="image">
+    <img id="image">
+    <div class="inline-block">
+      <label for="image">Upload File</label>
+      <input id="file" type="file" class="form-control-file" id="image" name="image">
+    </div>
   </div>
   <div class="form-group">
     <textarea class="form-control" rows="6" name="description" placeholder="Add Product Description"></textarea>
@@ -21,3 +23,6 @@
     <button type="submit" class="btn btn-secondary checkOut-btn">submit</button>
   </center>
 </form>
+
+
+<script src="/image.js"></script>
