admin/edit product page

--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -23,7 +23,7 @@
       </td>
       <td>${{this.price}}</td>
       <td>
-        <a href="">Edit Detail</a>
+        <a href="/admin/products/{{this.id}}">Edit Detail</a>
       </td>
       <td>
         <form action="/admin/products?_method=DELETE" method="POST">
