--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,6 +13,9 @@
     <a class="navbar-brand" href="/">SHOP</a>
       <nav class="nav-links">
         <div class="nav-item">
+          <a href="/admin/products" class="btn">admin</a>
+        </div>
+        <div class="nav-item">
           <div class="dropdown">
             <button class="btn dropdown-title" data-toggle="dropdown">
               <i class="fas fa-user fa-lg"></i>
