--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -1,23 +1,31 @@
 {{> alert}}
 
+{{#if newProduct}}
 <h2 id="title">Add New Product</h2>
+{{else}}
+<h2 id="title">Edit Product</h2>
+{{/if}}
 
 <form action="/admin/products/new" method="POST" enctype="multipart/form-data">
   <div class="form-group">
-    <input type="text" class="form-control" name="name" placeholder="Product Name">
+    <input type="text" class="form-control" name="name" value="{{product.name}}" placeholder="Product Name">
   </div>
   <div class="form-group">
-    <img id="image">
+    {{#if newProduct}}
+    <img id="image" src="{{product.image}}">
+    {{else}}
+    <img id="image" src="{{product.image}}" class="card-custom">
+    {{/if}}
     <div class="inline-block">
       <label for="image">Upload File</label>
       <input id="file" type="file" class="form-control-file" id="image" name="image">
     </div>
   </div>
   <div class="form-group">
-    <textarea class="form-control" rows="6" name="description" placeholder="Add Product Description"></textarea>
+    <textarea class="form-control" rows="6" name="description" placeholder="Add Product Description">{{product.description}}</textarea>
   </div>
   <div class="form-group">
-    <input type="number" class="form-control" name="price" placeholder="Price">
+    <input type="number" class="form-control" name="price" value="{{product.price}}" placeholder="Price">
   </div>
   <center>
     <button type="submit" class="btn btn-secondary checkOut-btn">submit</button>
