--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -24,7 +24,7 @@
       <td>{{this.payment_status}}</td>
       <td>{{this.shipping_status}}</td>
       <td>
-        <a href="">Edit Detail</a>
+        <a href="/admin/orders/{{this.id}}">Edit Detail</a>
       </td>
     </tr>
     {{/each}}
