--- a/views/admin/order.hbs
+++ b/views/admin/order.hbs
@@ -1,3 +1,4 @@
+<form action="/admin/orders/{{order.id}}?_method=PUT" method="POST">
 <div class="row">
   <div class="col-6">
     <ul class="list-group">
@@ -14,9 +15,9 @@
             <th scope="row">Shipping Status</th>
             <td>
               <select class="form-control">
-                <option>Not Shipped</option>
-                <option>Shipping</option>
-                <option>Arrived</option>
+                <option {{#ifEquals order.shipping_status '-1'}}selected{{/ifEquals}}>Not Shipped</option>
+                <option {{#ifEquals order.shipping_status '0'}}selected{{/ifEquals}}>Shipping</option>
+                <option {{#ifEquals order.shipping_status '1'}}selected{{/ifEquals}}>Arrived</option>
               </select>
             </td>
           </tr>
@@ -95,7 +96,6 @@
 </div>
 
 <center>
-  <form action="/order/{{order.id}}/cancel" method="POST">
     <button type="submit" class="btn btn-secondary checkOut-btn">Update</button>
-  </form>
 </center>
+</form>
