--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,7 +22,7 @@
             </button>
             <div class="dropdown-menu dropdown-menu-right">
               <a class="dropdown-item" href="/orders">Order Tracking</a>
-              <a class="dropdown-item" href="#">Account</a>
+              <a class="dropdown-item" href="/user/account">Account</a>
               <a class="dropdown-item" href="#">Log Out</a>
             </div>
           </div>
