--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -6,26 +6,29 @@
 
 <table class="table table-bordered">
   <thead class="thead-light">
-    <tr>
-      <th scope="col custom-table-width">Order Number</th>
-      <th scope="col custom-table-width">Price</th>
+    <tr class="text-center">
+      <th scope="col">Order Number</th>
+      <th scope="col">Order Date</th>
+      <th scope="col">Shipping Status</th>
       <th scope="col">Payment Method</th>
       <th scope="col">Payment Status</th>
-      <th scope="col">Shipping Status</th>
-      <th scope="col">Order Detail</th>
+      <th scope="col">Detail</th>
     </tr>
   </thead>
   <tbody>
     {{#each orders}}
-    <tr>
+    <tr class="text-center">
       <td>#{{this.id}}</td>
-      <td>${{this.amount}}</td>
-      <td></td>
-      <td>{{this.payment_status}}</td>
+      <td>{{Date this.createdAt}}</td>
       <td>
-        {{#ifEquals this.shipping_status '-1'}}Not Shipped{{/ifEquals}}
+        {{#ifEquals this.shipping_status '-1'}}Preparing{{/ifEquals}}
         {{#ifEquals this.shipping_status '0'}}Shipping{{/ifEquals}}
         {{#ifEquals this.shipping_status '1'}}Arrived{{/ifEquals}}
+      </td>
+      <td></td>
+      <td>
+        {{#ifEquals this.payment_status '-1'}}Not Paid{{/ifEquals}}
+        {{#ifEquals this.payment_status '1'}}Paid{{/ifEquals}}
       </td>
       <td>
         <a href="/admin/orders/{{this.id}}">Edit Detail</a>
