--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -17,8 +17,8 @@
     <img id="image" src="{{product.image}}" class="card-custom">
     {{/if}}
     <div class="inline-block">
-      <label for="image">Upload File</label>
-      <input id="file" type="file" class="form-control-file" id="image" name="image" value="{{product.image}}">
+      <label for="file">Upload File</label>
+      <input id="file" type="file" accept="image/*" class="form-control-file" name="image" value="{{product.image}}">
     </div>
   </div>
   <div class="form-group">
