--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -6,22 +6,22 @@
 <br>
 <a href="/admin/products/new" type="button" class="btn btn-primary add-btn">Add New Product</a>
 
-<table class="table table-bordered">
+<table class="table table-bordered custom-table-width">
   <thead class="thead-light">
-    <tr>
-      <th scope="col custom-table-width">Product Name</th>
-      <th scope="col custom-table-width">Image</th>
+    <tr class="text-center">
+      <th scope="col">Product Name</th>
+      <th scope="col">Image</th>
       <th scope="col">Price</th>
-      <th scope="col">Option</th>
+      <th scope="col">Detail</th>
       <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
     {{#each products}}
-    <tr>
+    <tr class="text-center">
       <td>{{this.name}}</td>
       <td>
-        <img class="card-img-top" style="width: 200px;" src="{{this.image}}" alt="product_photo">
+        <img style="width: 200px;" src="{{this.image}}" alt="product_photo">
       </td>
       <td>${{this.price}}</td>
       <td>
