--- a/views/user/account.hbs
+++ b/views/user/account.hbs
@@ -4,17 +4,17 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="name">Name</label>
-      <input type="string" class="form-control" id="name" placeholder="Name">
+      <input type="string" class="form-control" id="name" name="name" value="{{name}}" placeholder="Name">
     </div>
     <div class="form-group col-md-6">
       <label for="email">Email</label>
-      <input type="email" class="form-control" id="email" placeholder="Email">
+      <input type="email" class="form-control" id="email" name="email" value="{{email}}" placeholder="Email">
     </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="account">Account</label>
-      <input type="string" class="form-control" id="account" placeholder="Account">
+      <input type="string" class="form-control" id="account" name="account" value="{{account}}" placeholder="Account">
     </div>
     <div class="form-group col-md-6">
       <label for="password" id="password-label">Password</label>
@@ -26,11 +26,11 @@
   
   <div class="form-group">
     <label for="address">Address</label>
-    <input type="text" class="form-control" id="address" placeholder="1234 Main St">
+    <input type="text" class="form-control" id="address" name="address" value="{{address}}" placeholder="1234 Main St">
   </div>
   <div class="form-group">
     <label for="phone">Phone Number</label>
-    <input type="string" class="form-control" id="phone" placeholder="Ex: 0912123456">
+    <input type="string" class="form-control" id="phone" name="phone" value="{{phone}}" placeholder="Ex: 0912123456">
   </div>
   <center>
     <button type="submit" class="btn btn-secondary checkOut-btn">Update</button>
