Add login and register page

--- a/views/user/account.hbs
+++ b/views/user/account.hbs
@@ -33,7 +33,7 @@
     <input type="string" class="form-control" id="phone" name="phone" value="{{phone}}" placeholder="Ex: 0912123456">
   </div>
   <center>
-    <button type="submit" class="btn btn-secondary checkOut-btn">Update</button>
+    <button type="submit" class="btn btn-secondary custom-btn">Update</button>
   </center>
 </form>
 </div>
