--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,6 +130,17 @@
   display: block;
 }
 
-.account {
+.account, .form-logIn {
+  margin-top: 30px;
+}
+
+.log-in {
   margin-top: 20px;
+  width: 400px;
+  margin: auto;
+}
+
+.custom-btn {
+  width: 200px;
+  margin-top: 10px;
 }
