--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,6 +16,9 @@
           <a href="/admin/products" class="btn">admin</a>
         </div>
         <div class="nav-item">
+          <a class="dropdown-item" href="/user/login">Log In</a>
+        </div>
+        <div class="nav-item">
           <div class="dropdown">
             <button class="btn dropdown-title" data-toggle="dropdown">
               <i class="fas fa-user fa-lg"></i>
@@ -23,7 +26,7 @@
             <div class="dropdown-menu dropdown-menu-right">
               <a class="dropdown-item" href="/orders">Order Tracking</a>
               <a class="dropdown-item" href="/user/account">Account</a>
-              <a class="dropdown-item" href="#">Log Out</a>
+              <a class="dropdown-item" href="/user/login">Log Out</a>
             </div>
           </div>
         </div>
