use passport to make login function

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
           <a href="/admin/products" class="btn">admin</a>
         </div>
         <div class="nav-item">
-          <a class="dropdown-item" href="/user/login">Log In</a>
+          <a class="dropdown-item" href="/user/login"><i class="fas fa-sign-in-alt fa-lg"></i></a>
         </div>
         <div class="nav-item">
           <div class="dropdown">
