--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,18 +1,19 @@
 <div class="log-in">
   <h2><i class="fas fa-sign-in-alt"></i> Log In</h2>
-  <form class="form-logIn">
+  <form class="form-logIn" action="/user/login" method="POST">
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+      <label for="email">Email address</label>
+      <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" name="password" placeholder="Password">
     </div>
     <div class="form-group">
       No Account?
       <a href="/user/register">Register here</a>
     </div>
+    {{>alert}}
     <center>
       <button type="submit" class="btn btn-secondary custom-btn">Submit</button>
     </center>
