--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -1,26 +1,27 @@
 <div class="log-in">
   <h2><i class="fas fa-user"></i> Register</h2>
-  <form class="form-logIn">
+  <form action="/user/register" method="POST" class="form-logIn">
     <div class="form-group">
       <label for="account">Account</label>
-      <input type="email" class="form-control" id="account" placeholder="Enter account">
+      <input type="string" class="form-control" id="account" name="account" value="{{account}}" placeholder="Enter account">
     </div>
     <div class="form-group">
-      <label for="email">Email address</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter email">
+      <label for="email">Email</label>
+      <input type="email" class="form-control" id="email" name="email" value="{{email}}" placeholder="Enter email">
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" placeholder="Password">
+      <input type="password" class="form-control" id="password" name="password" value="{{password}}" placeholder="Password">
     </div>
     <div class="form-group">
       <label for="confirmPassword">Confirm Password</label>
-      <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm password">
+      <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" value="{{confirmPassword}}" placeholder="Confirm password">
     </div>
     <div class="form-group">
       Already had an account?
       <a href="/user/logIn">Log in</a>
     </div>
+    {{>alert}}
     <center>
       <button type="submit" class="btn btn-secondary custom-btn">Submit</button>
     </center>
