Add backstage authenticated

--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -1,6 +1,6 @@
 {{> alert}}
 
-<h2 id="title">後台</h2>
+<h2 id="title">Backstage</h2>
 <a href="/admin/products" style="text-decoration: none;">Product</a> |
 <a href="/admin/orders" style="text-decoration: none;">Order</a>
 <br>
