--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -13,6 +13,9 @@
       No Account?
       <a href="/user/register">Register here</a>
     </div>
+    <div class="form-group">
+      <a href="/admin/login">Backstage log in</a>
+    </div>
     {{>alert}}
     <center>
       <button type="submit" class="btn btn-secondary custom-btn">Submit</button>
