--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -6,7 +6,7 @@
 <br>
 <a href="/admin/products/new" type="button" class="btn btn-primary add-btn">Add New Product</a>
 
-<table class="table table-bordered custom-table-width">
+<table class="table table-bordered custom-product-table">
   <thead class="thead-light">
     <tr class="text-center">
       <th scope="col">Product Name</th>
