--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -41,12 +41,13 @@
             </div>
           </td>
         </tr>
+        
         {{/each}}
         <tr>
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col">Subtotal</th>
-          <th scope="col">{{this.totalQty}}</th>
+          <th scope="col">{{totalQty}}</th>
           <th scope="col">${{totalPrice}}</th>
           <th scope="col"></th>
         </tr>
