--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -104,7 +104,7 @@
   display: inline-block;
 }
 
-.custom-table-width {
+.custom-product-table {
   width: 800px;
 }
 
@@ -124,6 +124,7 @@
 
 .table-custom {
   text-align: center;
+  margin-top: 20px;
 }
 
 #reset-btn {
