--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -1,10 +1,8 @@
 <h2 id="title">後台</h2>
 <a href="/admin/products" style="text-decoration: none;">Product</a> |
 <a href="/admin/orders" style="text-decoration: none;">Order</a>
-<br>
-<a href="/admin/products/new" type="button" class="btn btn-primary add-btn">Add New Product</a>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-custom">
   <thead class="thead-light">
     <tr class="text-center">
       <th scope="col">Order Number</th>
@@ -21,14 +19,16 @@
       <td>#{{this.id}}</td>
       <td>{{Date this.createdAt}}</td>
       <td>
-        {{#ifEquals this.shipping_status '-1'}}Preparing{{/ifEquals}}
-        {{#ifEquals this.shipping_status '0'}}Shipping{{/ifEquals}}
-        {{#ifEquals this.shipping_status '1'}}Arrived{{/ifEquals}}
-      </td>
+        {{#ifEquals this.shipping_status -2}}Order Cancelled{{/ifEquals}}
+        {{#ifEquals this.shipping_status -1}}Preparing{{/ifEquals}}
+        {{#ifEquals this.shipping_status 0}}Shipping{{/ifEquals}}
+        {{#ifEquals this.shipping_status 1}}Arrived{{/ifEquals}}
       <td></td>
       <td>
-        {{#ifEquals this.payment_status '-1'}}Not Paid{{/ifEquals}}
-        {{#ifEquals this.payment_status '1'}}Paid{{/ifEquals}}
+        {{#ifEquals this.payment_status -2}}Refund Completed{{/ifEquals}}
+        {{#ifEquals this.payment_status -1}}Request Refund{{/ifEquals}}
+        {{#ifEquals this.payment_status -0}}Not Paid{{/ifEquals}}
+        {{#ifEquals this.payment_status 1}}Paid{{/ifEquals}}
       </td>
       <td>
         <a href="/admin/orders/{{this.id}}">Edit Detail</a>
