--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -8,7 +8,7 @@
 <form action="/admin/products/{{product.id}}?_method=PUT" method="POST" enctype="multipart/form-data">
 {{/if}}
   <div class="form-group">
-    <input type="text" class="form-control" name="name" value="{{product.name}}" placeholder="Product Name">
+    <input type="text" class="form-control" name="name" value="{{product.name}}" placeholder="Product name">
   </div>
   <div class="form-group">
     {{#if newProduct}}
@@ -17,18 +17,18 @@
     <img id="image" src="{{product.image}}" class="card-custom">
     {{/if}}
     <div class="inline-block">
-      <label for="file">Upload File</label>
+      <label for="file">Upload file</label>
       <input id="file" type="file" accept="image/*" class="form-control-file" name="image" value="{{product.image}}">
     </div>
   </div>
   <div class="form-group">
-    <textarea class="form-control" rows="6" name="description" placeholder="Add Product Description">{{product.description}}</textarea>
+    <textarea class="form-control" rows="6" name="description" placeholder="Add product description">{{product.description}}</textarea>
   </div>
   <div class="form-group">
     <input type="number" class="form-control" name="price" value="{{product.price}}" placeholder="Price">
   </div>
   <center>
-    <button type="submit" class="btn btn-secondary checkOut-btn">submit</button>
+    <button type="submit" class="btn btn-secondary checkOut-btn">Submit</button>
   </center>
 </form>
 
