Add shipping date

--- a/views/admin/order.hbs
+++ b/views/admin/order.hbs
@@ -25,7 +25,7 @@
           <tr>
             <th scope="row">Shipping Date</th>
             <td>
-              <input type="date" name="date" class="form-control">
+              <input type="date" name="shipping_date" value="{{Date order.shipping_date}}" class="form-control">
             </td>
           </tr>
           <tr>
