--- a/views/order.hbs
+++ b/views/order.hbs
@@ -21,7 +21,9 @@
           </tr>
           <tr>
             <th scope="row">Shipping Date</th>
-            <td></td>
+            <td>
+              {{Date order.shipping_date}}
+            </td>
           </tr>
           <tr>
             <th scope="row">Payment Status</th>
